--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -60,6 +60,9 @@ on boot
     write /dev/cpuset/system-background/cpus 2-5
     write /dev/cpuset/top-app/cpus 0-7
 
+    #Enable suspend to idle mode to reduce latency during suspend/resume
+    write /sys/power/mem_sleep "s2idle"
+
 on property:init.svc.vendor.charger=running
     setprop persist.sys.usb.config mass_storage
     load_system_props
