--- a/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sdm710.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sdm710.rc
@@ -1,12 +1,3 @@
-service vendor.fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sdm710
-    # "class hal" causes a race condition on some devices due to files created
-    # in /data. As a workaround, postpone startup until later in boot once
-    # /data is mounted.
-    class late_start
-    user system
-    group system input uhid
-   # writepid /dev/cpuset/system-background/tasks
-
 on init
     # Goodix fingerprint
     chown system system /dev/goodix_fp
@@ -40,6 +31,11 @@ on post-fs-data
     mkdir /data/vendor/goodix 0770 system system
     chown system system /data/vendor
 
-
-on property:vendor.fps_hal.restartimes=max
-    stop vendor.fps_hal
+service vendor.fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sdm710
+    # "class hal" causes a race condition on some devices due to files created
+    # in /data. As a workaround, postpone startup until later in boot once
+    # /data is mounted.
+    class late_start
+    user system
+    group system input uhid
+    writepid /dev/cpuset/system-background/tasks
