--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -458,6 +458,9 @@ on property:sys.boot_completed=1
     write /proc/sys/vm/swappiness 100
     write /proc/sys/vm/watermark_scale_factor 120
 
+    # Enable PowerHAL hint processing
+    setprop vendor.powerhal.init 1
+
 # corefile limit
 on property:persist.debug.trace=1
     mkdir /data/core 0777 root root
