[SQUASH]: Return back to CAF power hal
Revert "sdm710-common: Decrease launch boost to 3sec"

This reverts commit 4da5c53610f2018b30e48c491434f74982125596.

Revert "sdm710-common: Set schedtune boost to 5"

This reverts commit 386072ce9a214b9cb6610ad39410d86c44e52d4b.

Revert "sdm710-common: Use bonito powerstats"

This reverts commit 5697fadd7cbe89b8cc40eaedd5b24628a9293dac.

Revert "sdm710-common: power-libperfmgr: InteractionHandler: exit silently if int state is uninitialized"

This reverts commit b4ad2291f38b607fb9146462c781253e84d8575e.

Revert "sdm710-common: libperfmgr: Rename pixel to xiaomi"

This reverts commit 22adb13fb88c402b8610afdc4c09dc72157f5866.

Revert "sdm710-common: power-libperfmgr: Scan input devices for eligible DT2W node"

This reverts commit c56cc815cb609b1de671a085d5e1bb2240c23a02.

Revert "sdm710-common: Import powerhint file from google bonito"

This reverts commit 09e0639d7b5beac982fe9ffa29dcecf0386f3e6e.

Revert "sdm710-common: Enable Pixel atrace HAL"

This reverts commit b4da27a692d44735b6dc1c0e248e3b042cd39c6b.

Revert "sdm710-common: sepolicy: Fix building errors"

This reverts commit 8e1d3ce3c82762877bc0a12baac64c4c2501c4ee.

Revert "sdm710-common: powerstats: Don't look for MPSS for now"

This reverts commit 28eed98cdb6305c21ad00d248bb14bbbad9a91e2.

Revert "sdm710-common: Add SELinux policy for hal_power_stats"

This reverts commit 75c49d2d522331a77bc4f9098873b21805f4b6b9.

Revert "sdm710-common: powerstats: Pixel -> Xiaomi"

This reverts commit 3e10a8ecde63508389158ba305e372d802fc53fc.

Revert "sdm710-common: Kang powerstats from crosshatch"

This reverts commit b68965daf80ead211877ba9d77e1ea1c93c0001f.

Revert "sdm710-common: Build libperfmgr HAL"

This reverts commit 7afed78c8eef09329ca6d1fa8ac6493d3c41106e.

Revert "sdm710-common: Initial sepolicy for power-libperfmgr"

This reverts commit b9937de6103a8c8ba16e2a6862cfb82217702e0b.

Revert "sdm710-common: Enable idle_state mechanism for Xiaomi sdm710 platform"

This reverts c

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -339,7 +339,15 @@ on post-fs-data
     mkdir /data/vendor/fm 0770 system system
     chmod 0770 /data/vendor/fm
 
+    #Create PERFD deamon related dirs
+    mkdir /data/vendor/perfd 0770 root system
+    chmod 2770 /data/vendor/perfd
+    rm /data/vendor/perfd/default_values
+
     mkdir /data/vendor/secure_element 0777 system system
+
+    #Create IOP  deamon related dirs
+    mkdir /data/vendor/iop 0700 root system
 
     # Mark the copy complete flag to not completed
     write /data/vendor/radio/copy_complete 0
@@ -449,9 +457,6 @@ on property:sys.boot_completed=1
     swapon_all /vendor/etc/fstab.qcom
     write /proc/sys/vm/swappiness 100
     write /proc/sys/vm/watermark_scale_factor 120
-
-    # Enable PowerHAL hint processing
-    setprop vendor.powerhal.init 1
 
 # corefile limit
 on property:persist.debug.trace=1
