Welcome to SDM710 Family!
 * After switching to OOS display HAL 12ba0dd we don't need vendor.display.config@1.7.vendor
 * Revert 9ada79c
 * Drop Codec2
 * No need to build libstdc++
 * Drop unneeded props
 * Drop unneeded sepolicy rules
 * Drop unneeded configs
 * Remove extra spaces

--- a/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sdm710.rc
+++ b/fingerprint/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sdm710.rc
@@ -30,6 +30,8 @@ on boot
 on post-fs-data
     mkdir /data/vendor/fpc 0770 system system
     mkdir /data/vendor/goodix 0770 system system
+    mkdir /data/vendor/goodix/gf_data/authenticate 0770 system system
+    mkdir /data/vendor/goodix/gf_data/enroll 0770 system system
     chown system system /data/vendor
 
 service vendor.fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.1-service.xiaomi_sdm710
